# igver

./: .gitignore  CLAUDE.md  CONTAINER_FIX_PLAN.md  DOCKER_USAGE.md  LICENSE  MANIFEST.in  MCP_IMPLEMENTATION_PLAN.md  README.md  dev_igv.py  igver.py  rebuild_package.sh  requirements.txt  setup.py  shoot_igv.py
CLAUDE/: ADVANCED_EXAMPLES.md  CLAUDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README_IMPROVEMENTS.md  TASK_LIST.md
CLUADE/: CLAUDE.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  README_IMPROVEMENTS.md
docker/: Dockerfile  dockerfile_igv  dockerfile_igver
igver/: __init__.py  cli.py  igver.py
igver-mcp/: README.md  SETUP_CLAUDE_CODE.md  claude_desktop_settings.json  pyproject.toml  test_integration.py
igver-mcp/examples/: batch_config.yaml  sample_usage.md
igver-mcp/src/igver_mcp/: __init__.py  handlers.py  server.py  utils.py
igver-mcp/tests/: __init__.py  test_e2e.py
test/: build_and_push_docker.sh  build_and_push_docker_with_log.sh  check_docker_code.sh  check_igv_libs.sh  debug_cli_params.sh  debug_container_detection.sh  debug_docker_test.sh  debug_igv_failure.sh  diagnose_docker.sh  diagnose_singularity.sh  docker_test_commands.txt  example_regions.bed  example_regions_bed6.bed  final_diagnosis.sh  force_rebuild_docker.sh  quick_test_docker.sh  region.txt  regions.txt  sample_tracks.txt  simple_docker_test.sh  singularity_working_test.sh  tag_haplotype.batch  test_auto_detection.sh  test_bed_support.py  test_cli.py  test_cli_fixed.sh  test_container_detection.py  test_direct_run.sh  test_docker.sh  test_docker_fixed.sh  test_force_local.sh  test_format_integration.py  test_igv_directly.sh  test_igv_timeout.sh  test_igv_version.py  test_igv_with_wrapper.sh  test_input_file.py  test_local_fixes.sh  (+15 more)
(+32 files in other folders)
